@@ -1,3 +1,8 @@
+caputils-0.7.11
+---------------
+
+	* add: [capinfo] Exit with code 1 if any error occurs.
+
 caputils-0.7.10
 ---------------
 
